--- a/KotaPalace/Resources/layout/ready_order_row.xml
+++ b/KotaPalace/Resources/layout/ready_order_row.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
                 android:layout_toEndOf="@+id/row_order_no">
 
                 <com.google.android.material.textview.MaterialTextView
@@ -64,6 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:layout_marginBottom="10dp"
                     android:text="Date"
                     android:textColor="@color/gray"
                     />
