--- a/KotaPalace/Resources/layout/order_items_row.xml
+++ b/KotaPalace/Resources/layout/order_items_row.xml
@@ -13,9 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,10 +32,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:text="Name"
+                android:text="@string/order_name"
                 android:textColor="#2a2929"
                 android:textStyle="normal"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
             <com.google.android.material.textview.MaterialTextView
@@ -43,19 +43,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Price"
+                android:text="@string/order_price"
                 android:textSize="12sp"
                 android:textColor="@color/price_color"
                 android:layout_below="@id/order_item_name"/>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/order_item_quantity"
+                android:id="@+id/order_item_id"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Id"
+                android:text="@string/order_id"
                 android:textColor="@color/black"
                 android:background="@drawable/button_bg"
                 android:gravity="center"
