--- a/KotaPalace/Resources/layout/order_row_view.xml
+++ b/KotaPalace/Resources/layout/order_row_view.xml
@@ -14,24 +14,24 @@
         <RelativeLayout
             android:id="@+id/topLayout"
             android:layout_width="match_parent"
-            android:layout_height="320dp">
+            android:layout_height="250dp">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="16dp"
                 android:src="@mipmap/logo_food"
-                android:contentDescription="description" />
+                android:scaleType="centerCrop"/>
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/close_order_view"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_margin="16dp"
+                android:layout_margin="10dp"
                 android:src="@drawable/mtrl_ic_cancel"
                 android:tint="@color/gray"
                 android:contentDescription="description" />
@@ -58,7 +58,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/business_name"
+                        android:id="@+id/order_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp"
@@ -68,21 +68,13 @@
                         android:textSize="24sp" />
 
                     <TextView
-                        android:id="@+id/business_order_price"
+                        android:id="@+id/order_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="R19"
                         android:textColor="@color/price_color"
                         android:textSize="16sp"
                         android:textStyle="bold" />
-
-                    <!--<TextView
-                        android:id="@+id/order_quantity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="R19"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />-->
                 </LinearLayout>
 
             </LinearLayout>
@@ -107,7 +99,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/business_status"
+                        android:id="@+id/order_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp"
@@ -136,29 +128,7 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:layout_below="@id/TopLine"
-            android:layout_above="@id/BtnProcess"
-            />
-<!--
-        <TextView
-            android:id="@+id/business_order_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:textColor="#444444"
-            android:textSize="16sp" />-->
-
-        <View
-            android:id="@+id/BottomLine"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="#dedede" 
-            android:layout_above="@id/BtnProcess"
-            android:layout_below="@id/orderItemsRecyclerView"
-            />
+            android:layout_above="@id/BtnProcess"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/BtnProcess"
