--- a/KotaPalace/Resources/layout/user_row.xml
+++ b/KotaPalace/Resources/layout/user_row.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <Refractored.Controls.CircleImageView
                 android:id="@+id/row_user_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
