--- a/KotaPalace/Resources/layout/order_row.xml
+++ b/KotaPalace/Resources/layout/order_row.xml
@@ -26,11 +26,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!--<androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/row_order_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@drawable/ic_account_circle_black_18dp"/>-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/row_order_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:text="time"
+                android:textSize="10sp"
+                android:layout_alignParentEnd="true"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
