--- a/KotaPalace/Resources/layout/fragment_add_user.xml
+++ b/KotaPalace/Resources/layout/fragment_add_user.xml
@@ -110,23 +110,6 @@
                 android:minHeight="25dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColorHint="@color/colorThemeColor"
-                    android:textColor="@color/colorThemeColor"
-                    android:hint="User Type"
-                    android:inputType="text"
-                    android:id="@+id/InputAddUserType" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:minWidth="25dp"
-                android:minHeight="25dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -152,7 +135,7 @@
                     android:textColorHint="@color/colorThemeColor"
                     android:textColor="@color/colorThemeColor"
                     android:hint="Password"
-                    android:inputType="text"
+                    android:inputType="textPassword"
                     android:id="@+id/InputAddPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -161,6 +144,8 @@
                 android:minHeight="25dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:passwordToggleDrawable="@drawable/design_password_eye"
+                app:passwordToggleEnabled="true"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -169,9 +154,53 @@
                     android:textColorHint="@color/colorThemeColor"
                     android:textColor="@color/colorThemeColor"
                     android:hint="Confirm password"
-                    android:inputType="text"
+                    android:inputType="textPassword"
                     android:id="@+id/InputAddConfirmPassword" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <!--<LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="pdp copy"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/InputPDP"
+                    android:id="@+id/txt_pdp_copy"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/BtnPDPCopy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="upload pdp"
+                    android:layout_gravity="end"
+                    android:layout_alignParentEnd="true"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Id copy"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/InputPDP"
+                    android:id="@+id/txt_id_copy"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/BtnIdCopy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="upload pdp"
+                    android:layout_gravity="end"
+                    android:layout_alignParentEnd="true"/>
+            </LinearLayout>-->
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/BtnAddUser"
@@ -179,7 +208,6 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorThemeColor"
                 android:text="@string/abc_action_mode_done"
-
             />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
@@ -203,114 +231,6 @@
         android:layout_height="40dp"
         app:backgroundTint="@color/colorThemeColor"
         app:layout_anchor="@+id/UserProfileImg"
-        app:layout_anchorGravity="right|bottom"
-    />
+        app:layout_anchorGravity="right|bottom"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-<!--<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/cancel_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/mtrl_ic_cancel"
-        android:contentDescription=""
-        android:tint="@color/colorPrimary"
-        android:layout_gravity="end"
-        android:padding="10dp"/>
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/title_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:text="update user details"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        android:layout_below="@id/cancel_iv"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Firstname"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/title_txt">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/InputUpdateFirstname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Lastname"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/reset_email_txt">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/InputUpdateLastname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="User Type"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/reset_email_txt">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/InputUpdateUserType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Phone Number"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/reset_email_txt">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/InputUpdatePhoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/BtnUpdateUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="update"
-        android:layout_below="@id/reset_password_txt"/>
-
-</LinearLayout>
--->
