--- a/KotaPalace/Resources/layout/fragment_profile.xml
+++ b/KotaPalace/Resources/layout/fragment_profile.xml
@@ -126,6 +126,7 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@color/colorThemeColor"
                 android:id="@+id/BtnUpdateProfile"
                 android:text="@string/abc_action_mode_done"/>
